# crypto-price-widget

./: CMakeLists.txt  flake.nix
app/: main.cpp
